--- a/app/package.json
+++ b/app/package.json
@@ -1,25 +1,24 @@
 {
   "name": "svelte-app",
-  "version": "1.0.0",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "dev": "concurrently \"npm run build-vite-watch\" \"dotnet watch run --project ./src/backend/GraphVisualizer\"",
+    "dev-vite": "vite",
+    "build": "concurrently \"npm run build-vite\" \"dotnet build\"",
+    "build-vite": "vite build --emptyOutDir --config ./vite.config.js",
+    "build-vite-watch": "vite build --emptyOutDir --config ./vite.config.js --watch",
+    "preview-vite": "vite preview"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-terser": "^0.4.0",
-    "rollup": "^3.15.0",
-    "rollup-plugin-css-only": "^4.3.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.1.2",
-    "svelte": "^4.2.12"
-  },
-  "dependencies": {
-    "d3": "^7.9.0",
-    "sirv-cli": "^2.0.0"
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "daisyui": "^4.9.0",
+    "postcss": "^8.4.38",
+    "svelte": "^4.2.12",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
