--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "daisyui": "^4.9.0",
@@ -20,5 +21,8 @@
     "svelte": "^4.2.12",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "d3": "^7.9.0"
   }
 }
