--- a/app/src/backend/GraphVisualizer/GraphVisualizer.csproj
+++ b/app/src/backend/GraphVisualizer/GraphVisualizer.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="dotNetRdf.Core" Version="3.1.1" />
+    <PackageReference Include="dotNetRdf.Data.Virtuoso" Version="3.0.0-rc0004" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
