--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,9 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "d3": "^7.9.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "theme-change": "^2.5.0"
   }
 }
