fixed dev experience

--- a/app/package.json
+++ b/app/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run build-vite-watch\" \"dotnet watch run --project ./src/backend/GraphVisualizer\"",
-    "dev-vite": "vite",
+    "dev": "concurrently \"npm run dev-vite\" \"dotnet watch run --project ./src/backend/GraphVisualizer\"",
+    "dev-vite": "vite --open --config ./vite.config.js",
     "build": "concurrently \"npm run build-vite\" \"dotnet build --no-incremental && dotnet build\"",
     "build-vite": "vite build --emptyOutDir --config ./vite.config.js",
-    "build-vite-watch": "vite build --emptyOutDir --config ./vite.config.js --watch",
     "preview-vite": "vite preview"
   },
   "devDependencies": {
