--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
+    "svelte-spa-router": "^4.0.1",
     "theme-change": "^2.5.0"
   }
 }
