added api fetch

--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,5 @@
-VITE_BASE_URL=https://localhost:7088
+# URLs
+VITE_BASE_URL=https://localhost:5000
 
 # ROUTES
-VITE_ROUTE_TEST=Test
+VITE_ROUTE_Sparql_Search=/v1/Sparql/Search
