--- a/app/src/backend/GraphVisualizer/appsettings.json
+++ b/app/src/backend/GraphVisualizer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Sparql": {
+    "BaseUrl": "https://dbpedia.org/sparql"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
