implemented graph query

--- a/app/.env
+++ b/app/.env
@@ -3,3 +3,4 @@ VITE_BASE_URL=https://localhost:5000
 
 # ROUTES
 VITE_ROUTE_Sparql_Search=/v1/Sparql/Search
+VITE_ROUTE_Sparql_Graph=/v1/Sparql/Graph
